--- a/backend/src/main/resources/templates/signup.hbs
+++ b/backend/src/main/resources/templates/signup.hbs
@@ -75,8 +75,8 @@
             <p>You can write and publish unlimited articles. Share your thoughts, ideas, and expertise with the world—no
                 restrictions, just pure creativity!</p>
         </div>
-        <div style="grid-column: 2">
-            <p>picture</p>
+        <div style="grid-column: 2; max-width: 600px">
+            <img src="" alt="Write unlimited aricles" style="width: 100%; height: auto; display: block;">
         </div>
     </div>
     <div class="right-text">
@@ -85,8 +85,8 @@
             <p>Not only can you write, but you can also explore a world of articles from other writers. Engage with
                 their stories, leave comments, and be part of a growing community of passionate writers and readers.</p>
         </div>
-        <div style="grid-column: 1">
-            <p>picture</p>
+        <div style="grid-column: 1; max-width: 600px">
+            <img src="cid:comments" alt="Comments" style="width: 100%; height: auto; display: block;">
         </div>
     </div>
     <div class="left-text">
@@ -95,8 +95,8 @@
             <p>Finished an article? There’s always more to discover! Our AI curates a selection of articles to keep the
                 journey going—so you’ll never run out of great reads.</p>
         </div>
-        <div style="grid-column: 2">
-            <p>picture</p>
+        <div style="grid-column: 2; max-width: 600px">
+            <img src="cid:continue-reading" alt="Continue reading" style="width: 100%; height: auto; display: block;">
         </div>
     </div>
     <p>Ready to dive in? Start writing, reading, and discovering <a href="http://localhost:5173">now</a>!</p>
