Changed the email so the year will be dynamic

--- a/backend/src/main/resources/templates/login.hbs
+++ b/backend/src/main/resources/templates/login.hbs
@@ -47,7 +47,7 @@
     <br />
     <hr />
     <div style="text-align: center; color: gray; font-size: smaller">
-        <p>©2025 recowrite</p>
+        <p>©{{year}} recowrite</p>
     </div>
 </div>
 </body>
