The email now contains all the pictures necessary

--- a/backend/src/main/resources/templates/signup.hbs
+++ b/backend/src/main/resources/templates/signup.hbs
@@ -111,7 +111,7 @@
                 restrictions, just pure creativity!</p>
         </div>
         <div class="image" style="max-width: 600px;">
-            <img src="" alt="Write unlimited aricles" style="width: 100%; height: auto; display: block;">
+            <img src="cid:write" alt="Write unlimited aricles" style="width: 100%; height: auto; display: block;">
         </div>
     </div>
     <div class="right-text">
