- The email verification token is deleted once it's used - Some wording changes in the emails

--- a/backend/src/main/resources/templates/verifyEmail.hbs
+++ b/backend/src/main/resources/templates/verifyEmail.hbs
@@ -68,7 +68,7 @@
     <p>Hi there, {{username}}! We would like to verify if the email address provided is correct and valid.</p>
     <p>Please verify your email by clicking the button below</p>
     <div class="center">
-        <a class="chakra-button" href="http://localhost:5173/verify/email?token={{token}}">Click Me</a>
+        <a class="chakra-button" href="http://localhost:5173/verify/email?token={{token}}">Click Here</a>
     </div>
     <p>You will have 1 year from the time of the request to verify your email address.</p>
     <br/>
