--- a/backend/src/main/resources/templates/forgotPassword.hbs
+++ b/backend/src/main/resources/templates/forgotPassword.hbs
@@ -66,9 +66,9 @@
         <h1>Forgot your password</h1>
     </div>
     <p>Hi there, {{username}}! We received your request to change your password.</p>
-    <p>To continue press this button:</p>
+    <p>To continue press the button below</p>
     <div class="center">
-        <a class="chakra-button" href="http://localhost:5173/forgotPassword?token={{token}}">Click Me</a>
+        <a class="chakra-button" href="http://localhost:5173/forgotPassword?token={{token}}">Click Here</a>
     </div>
     <p>You will have 30 minutes from the time of the request to reset your password.</p>
     <br/>
