Email wording changed

--- a/backend/src/main/resources/templates/forgotPassword.hbs
+++ b/backend/src/main/resources/templates/forgotPassword.hbs
@@ -71,6 +71,7 @@
         <a class="chakra-button" href="http://localhost:5173/forgotPassword?token={{token}}">Click Here</a>
     </div>
     <p>You will have 30 minutes from the time of the request to reset your password.</p>
+    <p>If you didn’t request this, you can safely ignore this message.</p>
     <br/>
     <hr/>
     <div style="text-align: center; color: gray; font-size: smaller">
