--- a/backend/src/main/resources/templates/verifyEmail.hbs
+++ b/backend/src/main/resources/templates/verifyEmail.hbs
@@ -63,14 +63,15 @@
 <div id="main-screen">
     <h4>recowrite</h4>
     <div style="text-align: center">
-        <h1>Verify your email</h1>
+        <h1>Verify your account</h1>
     </div>
-    <p>Hi there, {{username}}! We would like to verify if the email address provided is correct and valid.</p>
+    <p>Hi there, {{username}}! We want to confirm that the email address you provided is correct.</p>
     <p>Please verify your email by clicking the button below</p>
     <div class="center">
         <a class="chakra-button" href="http://localhost:5173/verify/email?token={{token}}">Click Here</a>
     </div>
     <p>You will have 1 year from the time of the request to verify your email address.</p>
+    <p>If you didn’t sign up for this, you can safely ignore this message.</p>
     <br/>
     <hr/>
     <div style="text-align: center; color: gray; font-size: smaller">
