Implement strike management features with DTOs and service updates

--- a/backend/src/main/resources/templates/strikeGiven.hbs
+++ b/backend/src/main/resources/templates/strikeGiven.hbs
@@ -46,12 +46,12 @@
         and determined that it violates our community guidelines.</p>
     <p>As a result, a <strong>strike</strong> has been issued to your account.</p>
     <hr />
-    <h3>More details</h3>
+    <h3>Details</h3>
     <dl>
         <dt>Date:</dt>
         <dd>{{date}}</dd>
-        <dt>Content:</dt>
-        <dd>{{content}}</dd>
+        <dt>Blog:</dt>
+        <dd>{{blogTitle}}</dd>
         <dt>Reason:</dt>
         <dd>{{reason}}</dd>
     </dl>
