Frontend report sending interface

--- a/backend/src/main/resources/templates/strikeRemoved.hbs
+++ b/backend/src/main/resources/templates/strikeRemoved.hbs
@@ -28,7 +28,7 @@
 <div id="main-screen">
     <h4>recowrite</h4>
     <div style="text-align: center">
-        <h1>Update on Your Strike</h1>
+        <h1>An Update on Your Strike</h1>
     </div>
     <p>Hi there, {{username}}!</p>
     <p>We're reaching out yet again, but now with good news. Your strike was <strong>revoked</strong>.</p>
