Changed some endpoints and added some comments

--- a/backend/src/main/resources/templates/login.hbs
+++ b/backend/src/main/resources/templates/login.hbs
@@ -45,6 +45,8 @@
     <p>If this was you, you can simply ignore this email, but if not we recommend changing your password in
         <a href="http://localhost:5173/dashboard">the dashboard</a>.</p>
     <br />
+    <p style="margin-bottom: 0;">Best regards,</p>
+    <p style="margin-top: 0.25rem;"><strong>The recowrite team</strong></p>
     <hr />
     <div style="text-align: center; color: gray; font-size: smaller">
         <p>©{{year}} recowrite</p>
