--- a/backend/src/main/resources/templates/securityUpdate.hbs
+++ b/backend/src/main/resources/templates/securityUpdate.hbs
@@ -31,8 +31,10 @@
         <h1>Security update</h1>
     </div>
     <p>Hi there, {{username}}! Your password has been changed.</p>
-    <p>If you did not request this change, please contact us immediately.</p>
-    <br/>
+    <p>If you did not request this, please contact us immediately.</p>
+    <br />
+    <p style="margin-bottom: 0;">Best regards,</p>
+    <p style="margin-top: 0.25rem;"><strong>The recowrite team</strong></p>
     <hr/>
     <div style="text-align: center; color: gray; font-size: smaller">
         <p>©{{year}} recowrite</p>
