--- a/backend/src/main/resources/templates/forgotPassword.hbs
+++ b/backend/src/main/resources/templates/forgotPassword.hbs
@@ -68,7 +68,7 @@
     <p>Hi there, {{username}}! We received your request to change your password.</p>
     <p>To continue press the button below</p>
     <div class="center">
-        <a class="chakra-button" href="http://localhost:5173/forgotPassword?token={{token}}">Click Here</a>
+        <a class="chakra-button" href="http://localhost:5173/forgot-password?token={{token}}">Click Here</a>
     </div>
     <p>You will have 30 minutes from the time of the request to reset your password.</p>
     <p>If you didn’t request this, you can safely ignore this message.</p>
